--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,5 +1,10 @@
+
+body {
+  background-color: #F0F8FF;
+}
+
 .Container {
   display: flex;
-  justify-content: center;
-  gap: 15px;
+  justify-content: space-evenly;
+  gap: 10px;
 }
